manifests/sftp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftp
spec:
  selector:
    app: sftp
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
